{{$NEXT}}

      [ENHANCEMENTS]

      - The "install" command now has an --all option that will install every
      package that is currently registered on a stack.  This option is still
      experimental, but is the easiest way to just say "give me everything!"
      Inspired by @mar-kolya.

      - Improved error handling in Pinto::Remote so you get pretty colored
      errors instead of big ugly stack traces, just like you do when using
      a local repository.

      [MISCELLANEOUS]

      - Demoted some warnings to notifications, for less noisy output.
      Use the --verbose option to see more diagnostic output.

0.09993   2014-05-02 17:43:41 America/Los_Angeles

      [INCOMPATILBE CHANGES]

      - The protocol used to communicate with a remote Pinto repository is now
      versioned with media types via the "Accept" header.  So if you upgrade
      to this version of pinto, you'll also need to upgrade pintod to this same
      version.  Going forward, the protocol will be versioned so that we
      can potentially support different versions of the client and server at
      the same time.  But for the time being, you'll get an exception telling
      you whether to upgrade your client (pinto) or the server (pintod).

      - The PINTO_COLORS and PINTO_COLOURS environment variables are deprecated
      in favor of PINTO_PALETTE.  You can still use the old names for now, but
      they will be removed in a future release.

      - When using the --all option with the "list" command, the default format
      shows the pin status as "?" (i.e. indeterminable) instead of showing the
      main module status.

      [BUG FIXES]

      - Colorization is now disabled by default when the output is being piped or
      redirected to a file.  This improves interoperability with tools like grep,
      sort, etc.  To force colorization, use the --color or --colour option.
      Fixes GH #155. Thanks @mar-kolya.
